--- a/wp-content/vpdb/options/re/recently_activated.ini
+++ b/wp-content/vpdb/options/re/recently_activated.ini
@@ -1,4 +1,5 @@
 [recently_activated]
 option_value = <<<serialized>>> <array>
+option_value["wppusher/wppusher.php"] = 1528215593
 option_value["gitium/gitium.php"] = 1528215396
 autoload = "yes"
