[VP] Created usermeta 'vp_show_welcome_panel'
VP-Action: usermeta/create/2FBB1914F6E345D9A9F399C9B24F91DF
VP-User-Id: 6DDD9B795EC34E9FAD45BA891A23816F
VP-UserMeta-Key: vp_show_welcome_panel
VP-User-Login: admin

X-VP-Version: 4.0-beta
X-VP-Environment: testing

--- a/wp-content/vpdb/users/6D/6DDD9B795EC34E9FAD45BA891A23816F.ini
+++ b/wp-content/vpdb/users/6D/6DDD9B795EC34E9FAD45BA891A23816F.ini
@@ -27,3 +27,4 @@ show_welcome_panel#C005BA4487C44D64974F97EAC653B0ED = "1"
 <<table-prefix>>user-settings-time#4FE22D11E5624D41A47EE3CCEC6D7124 = "1528215366"
 community-events-location#C67771862C474E96B930808B114DF451 = <<<serialized>>> <array>
 community-events-location#C67771862C474E96B930808B114DF451["ip"] = "127.0.0.0"
+vp_show_welcome_panel#2FBB1914F6E345D9A9F399C9B24F91DF = "0"
