[VP] Updated page 'Install plugins in wordpress with composer'
VP-Action: post/update/3F80EE0CD1D8426AB3A489F46DE3C432
VP-Post-Title: Install plugins in wordpress with composer
VP-Post-Type: page
VP-Post-Format: page

X-VP-Version: 4.0-beta
X-VP-Environment: testing

--- a/wp-content/vpdb/posts/3F/3F80EE0CD1D8426AB3A489F46DE3C432.ini
+++ b/wp-content/vpdb/posts/3F/3F80EE0CD1D8426AB3A489F46DE3C432.ini
@@ -3,42 +3,9 @@ post_date = "2018-06-05 16:16:02"
 post_date_gmt = "2018-06-05 16:16:02"
 post_content = "<header class=\"header\">
 <div class=\"header__title\">
-<div class=\"title__self-teach-me\">SELF TEACH . ME</div>
-<div class=\"title__about\"><img src=\"http://selfteach.me/wp-content/themes/selfteachme/assets/src/img/about.svg\" alt=\"about\" /></div>
 <div class=\"title__title\">WORDPRESS</div>
 </div>
-</header>
-
-<hr class=\"header-footer__hr\" />
-
-<div class=\"slide-out-nav js-slide-out-nav\">
-<div class=\"slide-out-nav__content\"><nav class=\"nav\">
-<ul>
- 	<li style=\"list-style-type: none;\">
-<ul>
- 	<li id=\"menu-item-136\" class=\"menu-item menu-item-type-post_type menu-item-object-page menu-item-home menu-item-136\"><a href=\"http://selfteach.me/\">HOME</a></li>
- 	<li id=\"menu-item-317\" class=\"menu-item menu-item-type-post_type menu-item-object-page menu-item-317\"><a href=\"http://selfteach.me/about/\">ABOUT</a></li>
- 	<li id=\"menu-item-137\" class=\"menu-item menu-item-type-post_type menu-item-object-page menu-item-137\"><a href=\"http://selfteach.me/library/\">LIBRARY</a></li>
- 	<li id=\"menu-item-138\" class=\"menu-item menu-item-type-post_type menu-item-object-page current_page_parent menu-item-138\"><a href=\"http://selfteach.me/blog/\">BLOG</a></li>
- 	<li id=\"menu-item-140\" class=\"menu-item menu-item-type-post_type menu-item-object-page menu-item-140\"><a href=\"http://selfteach.me/contact/\">CONTACT</a></li>
-</ul>
-</li>
-</ul>
-</nav>
-<div class=\"social-media\">
-<ul>
- 	<li></li>
- 	<li></li>
- 	<li></li>
- 	<li></li>
- 	<li class=\"stretch\"></li>
-</ul>
-</div>
-</div>
-</div>
-<section class=\"search-overlay js-search-overlay\">
-<div class=\"container\"><form class=\"search-form search\" role=\"search\" action=\"http://selfteach.me/\" method=\"get\"><input name=\"s\" type=\"text\" placeholder=\"SEARCH\" /><button role=\"submit\" name=\"submit\">SUBMIT </button></form></div>
-</section>
+</header>&nbsp;
 <div class=\"content--with-sidebar header__pull-content-up\">
 <div class=\"post-title\">
 <h1>HOW TO INSTALL WORDPRESS PLUGINS WITH COMPOSER</h1>
@@ -73,7 +40,9 @@ Open the Terminal and from the command line, run:
 <span class=\"token function\">mv</span> composer.phar /usr/local/bin/composer</code></pre>
 <div class=\"note-box\">
 <h4>NOTE:</h4>
-If the above fails due to permissions, run the mv line again with sudo.</div>
+If the above fails due to permissions, run the mv line again with sudo.
+
+</div>
 
 <hr class=\"hr--space\" />
 
@@ -307,7 +276,9 @@ The number following the name is the version number. The star serves as a wildca
 <pre class=\" language-javascript\"><code class=\" language-javascript\"><span class=\"token string\">\"wpackagist-plugin/intuitive-custom-post-order\"</span> <span class=\"token punctuation\">:</span> “<span class=\"token number\">3.0</span><span class=\"token punctuation\">.</span><span class=\"token number\">7</span>”</code></pre>
 <div class=\"note-box\">
 <h4>NOTE:</h4>
-Just checking to see if you’re paying attention here. One of the cases I made for Composer was that it would lock down your plugin files. How does that work with wildcards and version numbers, obviously 3.0.1 and 3.0.4 are not the same. — For now you can just trust me or if it’s really bothering, skip down to <a href=\"http://selfteach.me/install-wordpress-plugins-composer/#lock-file\">the section where I talk about the composer.lock file.</a></div>
+Just checking to see if you’re paying attention here. One of the cases I made for Composer was that it would lock down your plugin files. How does that work with wildcards and version numbers, obviously 3.0.1 and 3.0.4 are not the same. — For now you can just trust me or if it’s really bothering, skip down to <a href=\"http://selfteach.me/install-wordpress-plugins-composer/#lock-file\">the section where I talk about the composer.lock file.</a>
+
+</div>
 The only reason that Composer knows to look at WP Packagist for these packages, is because it’s defined as a reference on line 11 and 12.
 <pre class=\" language-language\"><code class=\"-javascript language-language\">\"type\" : \"composer\",
 \"url\"  : \"http://wpackagist.org\"</code></pre>
@@ -358,7 +329,9 @@ First, I tell Composer what type of files they are (vcs) and where they are loca
 
 <div class=\"note-box\">
 <h4>NOTE:</h4>
-The URL is the SSH address, <strong>NOT</strong> HTTPS.</div>
+The URL is the SSH address, <strong>NOT</strong> HTTPS.
+
+</div>
 Then, I reference them as project requirements:
 <div class=\"prism-show-language\">
 <div class=\"prism-show-language-label\">JAVASCRIPT</div>
@@ -577,8 +550,8 @@ post_password = ""
 post_name = "install-plugins-wp-composer"
 to_ping = ""
 pinged = ""
-post_modified = "2018-06-05 16:24:44"
-post_modified_gmt = "2018-06-05 16:24:44"
+post_modified = "2018-06-05 16:25:08"
+post_modified_gmt = "2018-06-05 16:25:08"
 post_content_filtered = ""
 guid = "http://wordtest.fake/?page_id=2"
 menu_order = "0"
