[VP] Published page 'Testing new Page'
VP-Action: post/publish/3C02A293A14A41BFACE09FD8430F9CD8
VP-Post-Title: Testing new Page
VP-Post-Type: page
VP-Post-Format: page

X-VP-Version: 4.0-beta
X-VP-Environment: developer

--- a/wp-content/vpdb/posts/3C/3C02A293A14A41BFACE09FD8430F9CD8.ini
+++ b/wp-content/vpdb/posts/3C/3C02A293A14A41BFACE09FD8430F9CD8.ini
@@ -1,18 +1,18 @@
 [3C02A293A14A41BFACE09FD8430F9CD8]
-post_date = "2018-06-05 16:37:12"
-post_date_gmt = "0000-00-00 00:00:00"
-post_content = ""
+post_date = "2018-06-05 16:37:16"
+post_date_gmt = "2018-06-05 16:37:16"
+post_content = "New page test."
 post_title = "Testing new Page"
 post_excerpt = ""
-post_status = "draft"
+post_status = "publish"
 comment_status = "closed"
 ping_status = "closed"
 post_password = ""
-post_name = ""
+post_name = "testing-new-page"
 to_ping = ""
 pinged = ""
-post_modified = "2018-06-05 16:37:12"
-post_modified_gmt = "2018-06-05 16:37:12"
+post_modified = "2018-06-05 16:37:16"
+post_modified_gmt = "2018-06-05 16:37:16"
 post_content_filtered = ""
 guid = "http://60B2F1E7-DF12-4A0F-A243-F0E9CCE6C7DF"
 menu_order = 0
