--- a/wp-content/vpdb/comments/A4/A458CE939DBF40459ED64A6234CDF554.ini
+++ b/wp-content/vpdb/comments/A4/A458CE939DBF40459ED64A6234CDF554.ini
@@ -9,9 +9,11 @@ comment_content = "Hola, esto es un comentario.
 Para empezar a moderar, editar y borrar comentarios, por favor, visite la pantalla de comentarios en el escritorio.
 Los avatares de los comentaristas provienen de <a href=\"https://gravatar.com\">Gravatar</a>."
 comment_karma = "0"
-comment_approved = "1"
+comment_approved = "trash"
 comment_agent = ""
 comment_type = ""
 vp_comment_post_ID = "AB07EA43F0244DEAAF40E868FB1C699F"
 vp_user_id = 0
 vp_comment_parent = 0
+_wp_trash_meta_status#50D3DB3B1D454EDBA87E9541D708B797 = "1"
+_wp_trash_meta_time#A34A5D46190C47DA9756DAB3862EABEA = "1528217469"
