[VP] Page 'Testing new Page' moved to trash
VP-Action: post/trash/3C02A293A14A41BFACE09FD8430F9CD8
VP-Post-Title: Testing new Page
VP-Post-Type: page
VP-Post-Format: page

VP-Action: post/update/3C02A293A14A41BFACE09FD8430F9CD8
VP-Post-Title: Testing new Page
VP-Post-Type: page
VP-Post-Format: page

VP-Action: postmeta/create/0FED2D65053F4ECDAC71608D53CB72B6
VP-Post-Id: 3C02A293A14A41BFACE09FD8430F9CD8
VP-PostMeta-Key: _wp_trash_meta_status
VP-Post-Type: page
VP-Post-Title: Testing new Page

VP-Action: postmeta/create/08E7AB49E9EC4442B5C1467C722006CE
VP-Post-Id: 3C02A293A14A41BFACE09FD8430F9CD8
VP-PostMeta-Key: _wp_trash_meta_time
VP-Post-Type: page
VP-Post-Title: Testing new Page

VP-Action: postmeta/create/D123A8FD10654F669924D8C244EF8E24
VP-Post-Id: 3C02A293A14A41BFACE09FD8430F9CD8
VP-PostMeta-Key: _wp_desired_post_slug
VP-Post-Type: page
VP-Post-Title: Testing new Page

X-VP-Version: 4.0-beta
X-VP-Environment: developer

--- a/wp-content/vpdb/posts/3C/3C02A293A14A41BFACE09FD8430F9CD8.ini
+++ b/wp-content/vpdb/posts/3C/3C02A293A14A41BFACE09FD8430F9CD8.ini
@@ -4,15 +4,15 @@ post_date_gmt = "2018-06-05 16:37:16"
 post_content = "New page test."
 post_title = "Testing new Page"
 post_excerpt = ""
-post_status = "publish"
+post_status = "trash"
 comment_status = "closed"
 ping_status = "closed"
 post_password = ""
-post_name = "testing-new-page"
+post_name = "testing-new-page__trashed"
 to_ping = ""
 pinged = ""
-post_modified = "2018-06-05 16:37:25"
-post_modified_gmt = "2018-06-05 16:37:25"
+post_modified = "2018-06-05 16:57:38"
+post_modified_gmt = "2018-06-05 16:57:38"
 post_content_filtered = ""
 guid = "http://60B2F1E7-DF12-4A0F-A243-F0E9CCE6C7DF"
 menu_order = 0
@@ -20,3 +20,6 @@ post_type = "page"
 post_mime_type = ""
 vp_post_author = "6DDD9B795EC34E9FAD45BA891A23816F"
 vp_post_parent = 0
+_wp_trash_meta_status#0FED2D65053F4ECDAC71608D53CB72B6 = "publish"
+_wp_trash_meta_time#08E7AB49E9EC4442B5C1467C722006CE = "1528217858"
+_wp_desired_post_slug#D123A8FD10654F669924D8C244EF8E24 = "testing-new-page"
