--- a/wp-content/vpdb/options/re/recently_activated.ini
+++ b/wp-content/vpdb/options/re/recently_activated.ini
@@ -1,5 +1,6 @@
 [recently_activated]
 option_value = <<<serialized>>> <array>
+option_value["wp-rollback/wp-rollback.php"] = 1528217959
 option_value["handl-utm-grabber/handl-utm-grabber.php"] = 1528216542
 option_value["wppusher/wppusher.php"] = 1528215593
 option_value["gitium/gitium.php"] = 1528215396
