[VP] Published page 'Pagina 2 test'
VP-Action: post/publish/191E3C0C821A456C9B3A8694482D3471
VP-Post-Title: Pagina 2 test
VP-Post-Type: page
VP-Post-Format: page

X-VP-Version: 4.0-beta
X-VP-Environment: developer

--- a/wp-content/vpdb/posts/19/191E3C0C821A456C9B3A8694482D3471.ini
+++ b/wp-content/vpdb/posts/19/191E3C0C821A456C9B3A8694482D3471.ini
@@ -1,18 +1,18 @@
 [191E3C0C821A456C9B3A8694482D3471]
-post_date = "2018-06-05 17:26:27"
-post_date_gmt = "0000-00-00 00:00:00"
-post_content = ""
+post_date = "2018-06-05 17:26:35"
+post_date_gmt = "2018-06-05 17:26:35"
+post_content = "Pagina 2 testing 123."
 post_title = "Pagina 2 test"
 post_excerpt = ""
-post_status = "draft"
+post_status = "publish"
 comment_status = "closed"
 ping_status = "closed"
 post_password = ""
-post_name = ""
+post_name = "pagina-2-test"
 to_ping = ""
 pinged = ""
-post_modified = "2018-06-05 17:26:27"
-post_modified_gmt = "2018-06-05 17:26:27"
+post_modified = "2018-06-05 17:26:35"
+post_modified_gmt = "2018-06-05 17:26:35"
 post_content_filtered = ""
 guid = "http://C93C2E92-CE6F-4499-AA77-70BBE7F4DE55"
 menu_order = 0
